--- a/popoutStyles.css
+++ b/popoutStyles.css
@@ -51,15 +51,37 @@
     opacity: 1;
 }
 
-iframe {
-    border-radius: 5px;
-}
-
 .channel {
   white-space: nowrap;
   text-overflow: ellipsis;
   overflow-x: hidden;
   max-width: 534px;
+}
+
+iframe {
+    border-radius: 5px;
+}
+
+#loader {
+  position: absolute;
+  left: 50%;
+  top: 55%;
+  z-index: 1;
+  width: 21px;
+  height: 21px;
+  margin: -13.5px 0 0 -13.5px;
+  border: 3px solid #f3f3f3;
+  border-radius: 50%;
+  border-top: 3px solid #4b367c;
+  width: 21px;
+  height: 21px;
+  -webkit-animation: spin 2s linear infinite;
+  animation: spin 2s linear infinite;
+}
+
+@-webkit-keyframes spin {
+  0% { -webkit-transform: rotate(0deg); }
+  100% { -webkit-transform: rotate(360deg); }
 }
 
 ::-webkit-scrollbar {
